# wasm-gpu

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  LICENSE  README.md  gen_test_report.py
naga-ext/: Cargo.toml
naga-ext/src/: block_context.rs  into_literal.rs  lib.rs
src/: README.md  active_function.rs  active_module.rs  assembled_module.rs  atomic_counter.rs  backend.rs  bindings_gen.rs  brain_func_gen.rs  brain_function.rs  call_graph.rs  capabilities.rs  compiler.rs  compute_utils.rs  config.rs  engine.rs  extern_imports.rs  externs.rs  fenwick.rs  func.rs  func_gen.rs  function_collection.rs  global_instance.rs  instance.rs  lazy_small_map.rs  lib.rs  main.rs  memory.rs  module.rs  module_ext.rs  read_only.rs  recoverable.rs  references.rs  session.rs  shader_module.rs  std_objects.rs  store.rs  store_set.rs  tests_lib.rs  traps.rs  typed.rs  (+4 more)
src/active_function/: active_basic_block.rs  active_block.rs  arguments.rs  block_gen.rs  body_gen.rs  locals.rs  mvp.rs  results.rs
src/active_function/active_block/: active_basic_block.rs  mvp.rs  sign_extension.rs  threads.rs
src/assembled_module/: call_graph.rs
src/backend/: lazy.rs
src/backend/lazy/: buffer_ring.rs  memory.rs
src/backend/lazy/buffer_ring/: read.rs  write.rs
src/compute_utils/: interleave.glsl  interleave.preglsl  interleave.wgsl
src/func/: README.md  assembled_module.rs  bindings_gen.rs  call_graph.rs  func_gen.rs  func_ir.rs  function_collection.rs  typed.rs
src/func/func_gen/: basic_block_gen.rs  block_gen.rs  body_gen.rs  mvp.rs
src/func_gen/: basic_block_gen.rs  block_gen.rs  body_gen.rs  building.rs  mvp.rs
src/instance/: abstr.rs  abstract.rs  concrete.rs  data.rs  element.rs  func.rs  global.rs  memory.rs  ptrs.rs  table.rs
src/instance/abstr/: global.rs  memory.rs  table.rs
src/instance/abstract/: global.rs  memory.rs  table.rs
src/instance/concrete/: global.rs  memory.rs  table.rs
src/instance/global/: abstr.rs  builder.rs  concrete.rs  immutable.rs  instance.rs
src/instance/memory/: abstr.rs  builder.rs  concrete.rs  instance.rs
src/instance/table/: abstr.rs  builder.rs  concrete.rs  instance.rs
src/memory/: interleaved.rs
src/module/: error.rs  module_environ.rs  operation.rs  parsing.rs
src/std_objects/: bindings.rs  flags.rs  std_consts.rs  std_fns.rs  std_globals.rs  std_tys.rs  wasm_tys.rs
src/std_objects/std_fns/: rw_fns.rs
src/std_objects/std_globals/: bindings.rs
src/std_objects/std_tys/: base_tys.rs  buffer_tys.rs  naga_tys.rs
src/std_objects/wasm_tys/: native_f32.rs  native_i32.rs  pollyfill_extern_ref.rs  pollyfill_func_ref.rs  polyfill_f64.rs  polyfill_i64.rs  polyfill_v128.rs
src/store/: builder.rs  ptrs.rs  store.rs
src/store_set/: builder.rs  calling.rs  ptrs.rs
src/vulkano/: compute_utils.rs  memory.rs
src/wgpu/: async_buffer.rs  async_device.rs  async_queue.rs  buffer_ring.rs  compute_utils.rs  memory.rs
test-gen/: Cargo.toml  README.md
test-gen/src/: gen.rs
test-lib/: Cargo.toml
test-lib/src/: lib.rs  parity.rs
test_gen/: .gitignore  Cargo.toml
test_gen/src/: gen.rs  lib.rs
test_lib/: Cargo.toml
test_lib/src/: lib.rs  parity.rs
tests/: evaluation_tests.rs  run.rs  wasm_testsuite.rs  wgpu_backend.rs
tests/evaluation_tests/: output.rs
wasm-gpu/: Cargo.toml  README.md
wasm-gpu-transpiler/: Cargo.toml  README.md
wasm-gpu-transpiler/src/: README.md  active_function.rs  active_module.rs  assembled_module.rs  function_lookup.rs  lib.rs  linked_stack.rs  std_objects.rs  typed.rs  wasm_front.rs
wasm-gpu-transpiler/src/active_function/: active_block.rs  arguments.rs  locals.rs  results.rs
wasm-gpu-transpiler/src/active_function/active_block/: block_label.rs  mvp.rs  sign_extension.rs  simd.rs  threads.rs
wasm-gpu-transpiler/src/assembled_module/: call_graph.rs
wasm-gpu-transpiler/src/std_objects/: bindings.rs  flags.rs  wasm_tys.rs
wasm-gpu-transpiler/src/std_objects/wasm_tys/: native_f32.rs  native_i32.rs  pollyfill_extern_ref.rs  pollyfill_func_ref.rs  polyfill_f64.rs  polyfill_i64.rs  polyfill_v128.rs
wasm-gpu/src/: atomic_counter.rs  func.rs  instance.rs  lib.rs  main.rs  module.rs  panic_on_any.rs  store_set.rs  unit_tests_lib.rs
wasm-gpu/src/instance/: element.rs  func.rs  memory.rs  ptrs.rs
wasm-gpu/src/instance/table/: instance.rs
wasm-gpu/src/module/: error.rs
wasm-gpu/src/store_set/: builder.rs
wasm-gpu/tests/: evaluation_tests.rs  wasm_testsuite.rs
