[workspace]
resolver = "2"

members = [
    "naga-ext",
    "naga-ext-macros",

    "wasm-gpu",
    "wasm-gpu-transpiler",

    "wasm-gpu-test-gen",
    "wasm-gpu-test-lib",
]

[workspace.dependencies]
wasm-gpu-transpiler = { path = "../wasm-gpu-transpiler" }
wasm-gpu-test-gen = { path = "../test-gen" }
wasm-gpu-test-lib = { path = "../test-lib" }

rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.10"
cps = "0.2"
itertools = "0.10"
async-trait = "0.1"
elsa = "1.7"
futures = "0.3"
paste = "1.0"
fenwick = "2.0"
ouroboros = "0.15"
perfect-derive = "0.1"
tokio = { version = "1.22", features = ["rt", "rt-multi-thread", "macros"] }
naga = { version = "0.12", features = ["clone"] }
once_cell = "1.17"
pollster = "0.3"

wgpu = { version = "0.16", features = ["naga"] }
wgpu-async = "^0.18.1"

wat = "1.0"
wast = "57"
wasmtime-environ = "7"
wasmparser = "^0.115.1"
wasm-opcodes = "^0.115.1"
