[workspace]
resolver = "2"

members = [
    "naga-ext",

    "wasm-gpu",
    "wasm-gpu-transpiler",

    "test-gen",
    "test-lib",
]

[workspace.dependencies]
naga-ext = { path = "naga-ext" }
wasm-gpu-transpiler = { path = "wasm-gpu-transpiler" }
wasm-gpu = { path = "wasm-gpu" }
test-gen = { path = "test-gen" }
test-lib = { path = "test-lib" }

glob = "0.3"
enumset = "1"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.10"
cps = "0.2"
itertools = "0.10"
async-trait = "0.1"
elsa = "1.7"
futures = "0.3"
paste = "1.0"
fenwick = "2.0"
ouroboros = "0.15"
perfect-derive = "0.1"
petgraph = "0.6"
tokio = { version = "1.22", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.17"
pollster = "0.3"

syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

naga = { version = "0.12", features = ["clone", "validate"] }
wgpu = { version = "0.16", features = ["naga"] }
wgpu-async = "^0.18.1"

wat = "1.0"
wast = "57"
wasmparser = "^0.115.0"
wasm-opcodes = "^0.115.1"
wasmtime-environ = "7"
wasmtime = { version = "7", features = ["wat"] }
