[workspace]
resolver = "2"

members = [
    "naga-ext",

    "wasm-gpu",
    "wasm-gpu-transpiler",

    "test-gen",
    "test-lib",
]

[workspace.dependencies]
naga-ext = { path = "naga-ext" }
wasm-gpu-transpiler = { path = "wasm-gpu-transpiler" }
wasm-gpu = { path = "wasm-gpu" }
test-gen = { path = "test-gen" }
test-lib = { path = "test-lib" }

glob = "0.3"
enumset = "1.1"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
cps = "0.2"
itertools = "0.12"
async-trait = "0.1"
elsa = "1.10"
futures = "0.3"
paste = "1.0"
fenwick = "2.0"
ouroboros = "0.18"
perfect-derive = "0.1"
petgraph = "0.6"
once_cell = "1.17"
nonmax = "0.5"
glam = "0.25"
sealed = "0.5"

pollster = "0.3"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }

syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

naga = { version = "0.19", features = ["clone"] }
wgpu = { version = "0.19", features = ["naga"] }
wgpu-async = "0.19"

wat = "1.0"
wast = "70.0"
wasmparser = "0.115"
wasm-opcodes = "0.115"
wasmtime-environ = "7.0"
wasmtime = { version = "7.0", features = ["wat"] }

env_logger = "0.11"