[package]
name = "wasm-gpu-transpiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
naga-ext.workspace = true
wasm-opcodes.workspace = true

naga.workspace = true
itertools.workspace = true
petgraph.workspace = true
once_cell.workspace = true
thiserror.workspace = true
cps.workspace = true
elsa.workspace = true
paste.workspace = true
perfect-derive.workspace = true
ouroboros.workspace = true
nonmax.workspace = true

wasmparser.workspace = true
wasmtime-environ.workspace = true
wast.workspace = true

[features]
default = ["opt"]
big-errors = []
opt = []